Fixed the issue where overflowing content would make the parent grow. Fixed with min-height: 0.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,4 +8,5 @@
 
 .content {
     height: 100vh;
+    overflow-y: hidden;
 }
